--- a/lrc/app/src/main/res/layout/activity_main.xml
+++ b/lrc/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+  <HorizontalScrollView
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+      android:layout_width="match_parent"
+      android:layout_height="60dp">
+      <LinearLayout
+          android:orientation="horizontal"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent">
+          <ImageView
+              android:src="@mipmap/ic_launcher_round"
+              android:layout_width="60dp"
+              android:layout_height="60dp"></ImageView>
+          <ImageView
+              android:src="@mipmap/ic_launcher_round"
+              android:layout_width="60dp"
+              android:layout_height="60dp"></ImageView>
+          <ImageView
+              android:src="@mipmap/ic_launcher_round"
+              android:layout_width="60dp"
+              android:layout_height="60dp"></ImageView>
+          <ImageView
+              android:src="@mipmap/ic_launcher_round"
+              android:layout_width="60dp"
+              android:layout_height="60dp"></ImageView>
+          <ImageView
+              android:src="@mipmap/ic_launcher_round"
+              android:layout_width="60dp"
+              android:layout_height="60dp"></ImageView>
+          <ImageView
+              android:src="@mipmap/ic_launcher_round"
+              android:layout_width="60dp"
+              android:layout_height="60dp"></ImageView>
+          <ImageView
+              android:src="@mipmap/ic_launcher_round"
+              android:layout_width="60dp"
+              android:layout_height="60dp"></ImageView>
+          <ImageView
+              android:src="@drawable/ic_launcher_background"
+              android:layout_width="60dp"
+              android:layout_height="60dp"></ImageView>
+
+      </LinearLayout>
+
+  </HorizontalScrollView>
+
+</LinearLayout>
